// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductProperties /> should not render if no properties where passed 1`] = `
<Connect(ProductProperties)
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <ProductProperties
    dispatch={[Function]}
    properties={null}
    store={
      {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  >
    <SurroundPortals
      portalName="product.properties"
      portalProps={
        {
          "properties": null,
        }
      }
    >
      <Content
        properties={null}
      />
    </SurroundPortals>
  </ProductProperties>
</Connect(ProductProperties)>
`;

exports[`<ProductProperties /> should render if properties are passed 1`] = `
<Connect(ProductProperties)
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <ProductProperties
    dispatch={[Function]}
    properties={
      [
        {
          "displayGroup": "test",
        },
      ]
    }
    store={
      {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  >
    <SurroundPortals
      portalName="product.properties"
      portalProps={
        {
          "properties": [
            {
              "displayGroup": "test",
            },
          ],
        }
      }
    >
      <Content
        properties={
          [
            {
              "displayGroup": "test",
            },
          ]
        }
      >
        <Wrapper
          dense={false}
          groupName=""
          htmlOnly={false}
        >
          <div
            className="engage__product__product-property-group css-1x8awm9"
            data-group-name=""
          >
            <table>
              <thead />
              <tbody>
                <Rows
                  properties={
                    [
                      {
                        "displayGroup": "test",
                      },
                    ]
                  }
                >
                  <Row
                    key="undefined-undefined"
                    type={null}
                  >
                    <tr
                      aria-label=": "
                      className="engage__product__product-property"
                      data-type={null}
                      tabIndex={0}
                    >
                      <td
                        aria-hidden={true}
                        className={
                          {
                            "data-css-fl9ufm": "",
                          }
                        }
                      >
                        <span
                          dangerouslySetInnerHTML={
                            {
                              "__html": undefined,
                            }
                          }
                        />
                      </td>
                      <td
                        aria-hidden={true}
                        className={
                          {
                            "data-css-fl9ufm": "",
                          }
                        }
                        data-test-id="property: undefined"
                      >
                        <span
                          dangerouslySetInnerHTML={
                            {
                              "__html": undefined,
                            }
                          }
                        />
                      </td>
                    </tr>
                  </Row>
                </Rows>
              </tbody>
            </table>
          </div>
        </Wrapper>
      </Content>
    </SurroundPortals>
  </ProductProperties>
</Connect(ProductProperties)>
`;
